--- a/src/ml/读前须知.md
+++ b/src/ml/读前须知.md
@@ -14,6 +14,12 @@ $$\lim_{x \to \infty} x^2_{22} - \int_{1}^{5}x\mathrm{d}x + \sum_{n=1}^{20} n^{2
 
 ### 3
 
+<AudioPlayer
+src="https://m10.music.126.net/20230927105447/c4d1333d8b1489e9deb95f960749c574/ymusic/c087/7486/620c/cbef865308db1ef259bbdbe97353d347.mp3"
+title="《一往情深的恋人》李健"
+poster="https://p4.music.126.net/jK6Jjk5XwxLmjeK_04kqpw==/19124905253589969.jpg?param=300x300"
+/>
+
 《一往情深的恋人》
 
 如果不能陪你到最后
